Add Permutation_Combination, String.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,5 @@ project(code_practice)
 add_subdirectory(ADT_Stack)
 add_subdirectory(ADT_Queue)
 add_subdirectory(Sorting)
+add_subdirectory(Permutation_Combination)
+add_subdirectory(String)
