--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(ADT_Queue)
 add_subdirectory(Sorting)
 add_subdirectory(Permutation_Combination)
 add_subdirectory(String)
+add_subdirectory(CompleteBinaryTree)
