--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(Sorting)
 add_subdirectory(Permutation_Combination)
 add_subdirectory(String)
 add_subdirectory(CompleteBinaryTree)
+add_subdirectory(LinkedNodes)
