--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(Permutation_Combination)
 add_subdirectory(String)
 add_subdirectory(CompleteBinaryTree)
 add_subdirectory(LinkedNodes)
+add_subdirectory(LinkedList)
