--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(String)
 add_subdirectory(CompleteBinaryTree)
 add_subdirectory(LinkedNodes)
 add_subdirectory(LinkedList)
+add_subdirectory(ChainingHashTable_Mod)
