Add Movie Example. - The purpose of making this example is to practice hash table as well as ordered linked list. - A movie data consists of title, year, rating and running time. - Movies in the database are ordered in descending rating and ascending running time in a specific year. - Movies in the database are ordered in ascending year and descending running time at a specific rating. - All movie information is also stored in a hash table where each hash key's value is generated from the title. - Need to implement Free() method.
Signed-off-by: J. W. Kim <brecn@snu.ac.kr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(CompleteBinaryTree)
 add_subdirectory(LinkedNodes)
 add_subdirectory(LinkedList)
 add_subdirectory(ChainingHashTable_Mod)
+add_subdirectory(Movie)
