Add Subsets to CMakeLists. - Project(directory) Subsets has been on stage but excluded from the project. Now it is added. - Rename functions and change signatures to remove global variable. - Rename binary for project Fibonacci for unity.
Signed-off-by: J. W. Kim <brecn@snu.ac.kr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(LinkedList)
 add_subdirectory(ChainingHashTable_Mod)
 add_subdirectory(Movie)
 add_subdirectory(Fibonacci)
+add_subdirectory(Subset)
