Add ShortestPath. - Add ShortestPath. - Apply clang-format to previously non-applied .cc files.
Signed-off-by: J. W. Kim <brecn@snu.ac.kr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(ChainingHashTable_Mod)
 add_subdirectory(Movie)
 add_subdirectory(Fibonacci)
 add_subdirectory(Subset)
+add_subdirectory(ShortestPath)
