Change naming style
Signed-off-by: Jinwon Kim <brecn@snu.ac.kr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,17 @@
 cmake_minimum_required(VERSION 3.2.0)
-
 project(code_practice)
-
 add_compile_options(-std=c++11)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary)
-add_subdirectory(ADT_Stack)
-add_subdirectory(ADT_Queue)
-add_subdirectory(Sorting)
-add_subdirectory(Permutation_Combination)
-add_subdirectory(String)
-add_subdirectory(CompleteBinaryTree)
-add_subdirectory(LinkedList)
-add_subdirectory(ChainingHashTable_Mod)
-add_subdirectory(Movie)
-add_subdirectory(Fibonacci)
-add_subdirectory(Subset)
-add_subdirectory(ShortestPath)
+add_subdirectory(adt_stack)
+add_subdirectory(adt_queue)
+add_subdirectory(chaining_hash_table_mod)
+add_subdirectory(complete_binary_tree)
+add_subdirectory(fibonacci)
+add_subdirectory(linked_list)
+add_subdirectory(movie)
+add_subdirectory(permutation_combination)
+add_subdirectory(shortest_path)
+add_subdirectory(sorting)
+add_subdirectory(string)
+add_subdirectory(subset)
