--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(shortest_path)
 add_subdirectory(sorting)
 add_subdirectory(string)
 add_subdirectory(subset)
+add_subdirectory(trie)
